# energy-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  data_fetcher.py  data_processor.py  database.py  docker-compose.yml  logging_config.py  main.py  pyproject.toml  schema.sql  test_pipeline.py
